# rgb2pal

./: CMakeLists.txt  README  main.c  terminal256.palette
